# meeting-room-booking-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  specification.md
app/: main.py  seed.py
app/api/: dependencies.py  deps.py
app/api/endpoints/: admin.py  auth.py  bookings.py  rooms.py
app/core/: config.py  database.py  exceptions.py  logger.py  security.py
app/models/: __init__.py  booking.py  enums.py  room.py  slot.py  user.py
app/schemas/: auth.py  booking.py  error.py  room.py  slot.py  user.py
app/services/: auth_service.py  booking_service.py  room_service.py
app/tests/: conftest.py  test_auth.py  test_bookings.py  test_integration.py  test_rooms.py
