[tool.poetry]
package-mode = false

[project]
name = "meetingroombookingservice"
version = "0.1.0"
description = "Сервис бронирования переговорных комнат"
authors = [{ name = "Изотов Сергей", email = "serzh.io3@mail.ru" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "zxcvbn (>=4.5.0,<5.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
ruff = ">=0.6.0"
aiosqlite = ">=0.20.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
